# python-pcapng

./: .buildinfo  .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  coverage.cfg  example.py  genindex.html  index.html  library-usage.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  run-tests.sh  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: pre-commit.yml  test.yml
_modules/: index.html
_modules/pcapng/: blocks.html  exceptions.html  scanner.html  structs.html  utils.html
_sources/api/: blocks.txt  exceptions.txt  scanner.txt  structs.txt  utils.txt
api/: blocks.html  exceptions.html  index.html  scanner.html  structs.html  utils.html
docs/: .gitignore  Makefile  make.bat
docs/source/: conf.py  index.rst  library-usage.rst
docs/source/api/: index.rst
examples/: dump_pcapng_info.py  dump_pcapng_info_pretty.py  dump_tcpip_stats.py  generate_pcapng.py
examples/old/: README.md  dump-tcpip-stats.py  pcapng_to_elasticsearch.py  top-communications.py
pcapng/: __init__.py  _compat.py  blocks.py  exceptions.py  flags.py  objects.py  reader.py  scanner.py  strictness.py  structs.py  utils.py  writer.py
pcapng-docs/: Development_PcapNg - The Wireshark Wiki.html  PCAP Next Generation Dump File Format.html
pcapng-docs/Development_PcapNg - The Wireshark Wiki_files/: css.css  css_002.css  ws-wiki-print.css  ws-wiki-screen.css
pcapng/constants/: __init__.py  block_types.py  link_types.py  options.py
scripts/conversion/: pcapng_to_elasticsearch.py
scripts/traffic-analysis/: top-communications.py
test_data/: explicit_shb_sec_length.ntar  implicit_shb_sec_length.ntar  test002.ntar  test003.ntar  test004.ntar  test005.ntar  test006-fixed.ntar  test006.ntar  test008.ntar  test009.ntar  test010.ntar
tests/: test_object_interface.py  test_object_options.py  test_object_packet_enhanced.py  test_object_section_header.py  test_parse_enhanced_packet.py  test_parse_exceptions.py  test_parse_interface_block.py  test_parse_interface_stats.py  test_parse_section_header.py  test_parse_wireshark_capture_files.py  test_sample_wireshark.py  test_structs.py  test_utils.py  test_write_support.py
tests/new/: test_parse_enhanced_packet.py  test_parse_interface_block.py  test_parse_real_capture_files.py  test_parse_section_header.py  test_structs.py
