[metadata]
name = python-pcapng
url = pythhttps://github.com/rshk/python-pcapng
author = Samuele Santi
author_email = samuele@samuelesanti.com
description = Library to read/write the pcap-ng format used by various packet sniffers.
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
license = Apache Software License 2.0
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[flake8]
max-line-length = 88

[pycodestyle]
max-line-length = 88
