[metadata]
name = python-pcapng
description = Library to read/write the pcap-ng format used by various packet sniffers.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = pythhttps://github.com/rshk/python-pcapng
author = Samuele Santi
author_email = samuele@samuelesanti.com
license = Apache-2.0
license_file = LICENSE
license_files =
    LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = ~= 3.5
zip_safe = False

[options.extras_require]
dev =
    flake8
    isort
    pre-commit
    pytest>=5.4
    pytest-cov
    pytest-pycodestyle
    setuptools_scm[toml]
    sphinx
    sphinx-rtd-theme

[flake8]
max-line-length = 88

[pycodestyle]
max-line-length = 88
